--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <br>
                     <text>desenvolvedor</text></li>
                 <li>  
-                    <a id="linkimage" href="https://github.com/AyrtonCunha" target="_blank" rel="noopener noreferrer">
+                    <a id="linkimage" href="https://github.com/caio741" target="_blank" rel="noopener noreferrer">
                     <img id="fotogit" src="https://avatars.githubusercontent.com/u/102377804?v=4">
                     </a>
                     <br>
