mudando palheta de cores e adicionando textos

--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!-- 
+.color1 { #56a4dd };
+.color2 { #98ccdd };
+.color3 { #16496e };
+.color4 { #7c7c7c };
+.color5 { #aec6d1 }; 
+-->
+
+
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -32,17 +42,22 @@
 
 <!-- o corpo do projeto -->
 <body>
-    <div id="paginainicial">
-       <h1>TESTANDO</h1>
+    <div id="paginainicial" style="padding-top: 50px;">
+       <img id="img1cel" src="./img/img1cel.png" alt="">
+       <div id="boxtexto">
+           <h1>LimpaAÊ</h1>
+           <p>Lorem ipsum dolor sit amet. Id debitis soluta quo sunt libero qui dolor maxime eos numquam beatae id internos magnam est quam minus aut dolor facilis. Et officiis minima qui maxime labore ex unde earum qui pariatur tenetur est maxime magnam est nihil illo aut autem galisum. Ad consequuntur voluptatem ut dolore perspiciatis ut officiis consequatur ut voluptatem assumenda eum autem doloribus sit vitae Quis est error rerum. Est quaerat vitae ea galisum corrupti 33 recusandae reprehenderit.</p>
+        </div>
+       <img id="img2cel" src="./img/img2cel.png" alt="">
     </div>
     <div id="sobre">
 
     </div>
-    <div id="conteinervideo">
+    <div id="conteinervideo" >
 
         <h1>vídeo conceitual</h1>
         <div id="video">
-            <object width="960em" height="540em">
+            <object width="960px" height="540px" >
                 <param name="movie" value="https://www.youtube.com/embed/spEyPgS-iG4" />
                 <embed src="https://www.youtube.com/embed/spEyPgS-iG4" type="application/x-shockwave-flash" width="425" height="350" />
             </object>
@@ -136,7 +151,7 @@
                     <br>
                     <text>desenvolvedor</text></li>
                 <li>  
-                    <a id="linkimage" href="https://github.com/caio741" target="_blank" rel="noopener noreferrer">
+                    <a id="linkimage" href="https://github.com/AyrtonCunha" target="_blank" rel="noopener noreferrer">
                     <img id="fotogit" src="https://avatars.githubusercontent.com/u/102377804?v=4">
                     </a>
                     <br>
