--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                 <a href="#processo">Processo</a>
             </li>
             <li>
-                <a href="#conteinervideo">Video Conceitual</a>
+                <a href="#video">Video Conceitual</a>
             </li>
             <li>
-                <a href="#containerdev">Equipe</a>
+                <a href="#equipe">Equipe</a>
             </li>
 
         </ul>
@@ -61,13 +61,12 @@
            
 
     </div>
-    <div id="conteinervideo" >
-
+    <div id="video" >
         <h1>vídeo conceitual</h1>
         <div id="video">
             <object width="960px" height="540px" >
-                <param name="movie" value="https://www.youtube.com/embed/spEyPgS-iG4" />
-                <embed src="https://www.youtube.com/embed/spEyPgS-iG4" type="application/x-shockwave-flash" width="425" height="350" />
+                <param name="movie" value="https://www.youtube.com/embed/1sG5jq10qH4" />
+                <embed src="https://www.youtube.com/embed/1sG5jq10qH4" type="application/x-shockwave-flash" width="425" height="350" />
             </object>
         </div>
     </div>
@@ -86,7 +85,7 @@
             <div class="item">
                 <h6>Mapa conceitual</h6>
                 <img src="./img/mapa.png" alt="">
-                <a href="./pdfs/mapa mental.pdf" download target="_blank">Download (PDF)</a>
+                <a href="./pdfs/mapaConceitual.pdf" download target="_blank">Download (PDF)</a>
             </div>
             <div class="item">
                 <h6>Crazy 8's</h6>
@@ -130,14 +129,14 @@
             </div>  
             <div class="item">
                 <h6>Video conceitual</h6>
-                <img src="./img/mapa.png" alt="">
-                <a href="./pdfs/mapa mental.pdf" download target="_blank">Video (Youtube)</a>
+                <img src="./img/videoimg.bmp" alt="">
+                <a href="https://youtu.be/1sG5jq10qH4" download target="_blank">Video (Youtube)</a>
             
             </div>  
           </div>
     </div>
 
-    <div id="containerdev">
+    <div id="equipe">
         <h1>EQUIPE</h1>
         <div id="desenvolvedores">
             <ul>
