--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
         <img src="./img/logo.png" alt="">
         <ul id="listaheader">
             <li>
-                <a href="#sobre">Sobre</a>
+                <a href="#Sobre">Sobre</a>
             </li>
             <li>
-                <a href="#processo">Processo</a>
+                <a href="#Processo">Processo</a>
             </li>
             <li>
-                <a href="#video">Video Conceitual</a>
+                <a href="#Video">Video Conceitual</a>
             </li>
             <li>
-                <a href="#equipe">Equipe</a>
+                <a href="#Equipe">Equipe</a>
             </li>
 
         </ul>
@@ -51,7 +51,7 @@
         </div>
         <img id="img2cel" src="./img/img2cel.png" alt="">
     </div>
-    <div id="sobre">
+    <div id="Sobre">
         <div>
             <h1>Sobre</h1>
             <p>     O LimpaAê propõe a facilitação para encontrar diaristas, algo que acontece primordialmente no Brasil a partir de indicações de outras pessoas. Além disso, o aplicativo traz a facilidade do cliente contratar a diarista para tarefas especificas, como lavar e passar roupa, cozinhar, limpeza da casa ou até mesmo todas as alternativas.
@@ -61,7 +61,7 @@
            
 
     </div>
-    <div id="video" >
+    <div id="Video" >
         <h1>vídeo conceitual</h1>
         <div id="video">
             <object width="960px" height="540px" >
@@ -78,7 +78,7 @@
     <img src="img/Prototipo1.png"">
     </div>
 
-    <div id="processo" >
+    <div id="Processo" >
         <h1>Processo</h1>
         <h2>Design sprint </h2>
         <div class="grid-container">
@@ -136,7 +136,7 @@
           </div>
     </div>
 
-    <div id="equipe">
+    <div id="Equipe">
         <h1>EQUIPE</h1>
         <div id="desenvolvedores">
             <ul>
