#sobre para #Sobre (botão)

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
        <div id="boxtexto">
            <h1>LimpaAÊ</h1>
            <p>     O LimpaAê propõe a facilitação para encontrar diaristas, algo que acontece primordialmente no Brasil a partir de indicações de outras pessoas. Além disso, o aplicativo traz a facilidade do cliente contratar a diarista para tarefas especificas, como lavar e passar roupa, cozinhar, limpeza da casa ou até mesmo todas as alternativas.</p>
-           <a href="#sobre" >Veja mais sobre</a>
+           <a href="#Sobre" >Veja mais sobre</a>
         </div>
         <img id="img2cel" src="./img/img2cel.png" alt="">
     </div>
